// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands install displays validation issues of nested workspaces 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ Validation step
➤ YN0057: │ package-a-ddd35d: String bin field, but no attached package name
➤ YN0000: └ Completed
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: Done with warnings
",
}
`;

exports[`Commands install it should print the logs to the standard output when using --inline-builds 1`] = `
"➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ no-deps-scripted@npm:1.0.0 can't be found in the cache and will be fetched from the remote registry
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0007: │ no-deps-scripted@npm:1.0.0 must be built because it never did before or the last one failed
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDOUT preinstall out
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDERR preinstall err
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDOUT install out
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDERR install err
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDOUT postinstall out
➤ YN0000: │ no-deps-scripted@npm:1.0.0 STDERR postinstall err
➤ YN0000: └ Completed
➤ YN0000: Done
"
`;

exports[`Commands install it should skip build scripts when using --skip-builds 1`] = `
"➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ no-deps-scripted@npm:1.0.0 can't be found in the cache and will be fetched from the remote registry
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: Done
"
`;

exports[`Commands install reports warning if published binary field is a path but no package name is set 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ Validation step
➤ YN0057: │ root-workspace-0b6124: String bin field, but no attached package name
➤ YN0000: └ Completed
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: Done with warnings
",
}
`;
